--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,9 +11,10 @@
    <link rel="stylesheet" href="https://iamone-static.vercel.app/css/vars.css" />
    <link rel="stylesheet" href="https://iamone-static.vercel.app/css/master.css" />
    <link rel="stylesheet" href="https://iamone-static.vercel.app/css/global.css" />
-   <link rel="stylesheet" href="/_/static/style.css" />
+   <link rel="stylesheet" href="/_/static/site.css" />
    <title>iamone - Create personal link page</title>
 </head>
+
 <body class="regular-scroll">
    <header class="x-header">
       <div class="x-header-content xstack margin-x-auto h-inherit justify-space-between align-center">
@@ -23,30 +25,29 @@
             <a href="/" class="x-navmenu-item">Help</a>
             <a href="/" class="x-navmenu-item">About</a>
          </nav>
-         <button href="/" class="x-navmenu-action-button app-button bg-primary">&nbsp;Open app&nbsp;</button>
+         <button href="/" class="x-navmenu-action-button app-button bg-primary" id="app-redirect-button">&nbsp;Open app&nbsp;</button>
       </div>
    </header>
 
    <main class="x-main">
       <div class="x-hero ystack justify-center align-center">
-         <div class="x-hero-quote text-center bg-gradient-3 text-gradient">
+         <div class="x-hero-quote text-center">
             <h1 class="x-hero-quote-text">Way to increase<br /> popularity.</h1>
          </div>
          <br />
 
-         <div class="x-username-claim-input xstack align-center margin-y-large pad-y-small shadow-medium">
+         <div class="x-username-claim-input xstack align-center margin-y-large pad-y-small bg-background shadow-medium">
             <div class="x-username-claim-input-label">iamone.link/</div>
-            <input class="x-username-claim-input-controller" placeholder="username" />
-            <button class="app-button x-username-claim-action pad-x-large bg-gradient-5">Get link</button>
+            <input class="x-username-claim-input-controller" id="x-username-claim-input" placeholder="username" />
+            <button class="app-button x-username-claim-action pad-x-large bg-gradient-1" id="username-claim-action-button">Get link</button>
          </div>
          <br />
-         <div><p>It's completely free just claim your link now</p></div>
+         <div>
+            <p>It's completely free just claim your link now</p>
+         </div>
 
          <div class="x-hero-scroll-bottom-icon">
-            <svg 
-               xmlns="http://www.w3.org/2000/svg" 
-               class="x-icon" 
-               viewBox="0 0 24 24">
+            <svg xmlns="http://www.w3.org/2000/svg" class="x-icon" viewBox="0 0 24 24">
                <path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path>
             </svg>
          </div>
@@ -107,13 +108,71 @@
          </div>
       </div>
 
-      <br />
-      <br />
-      <br />
-      <br />
-      <br />
+      <!-- <div class="shadow-medium">
+         <img src="/_/static/img1.png" height="280" />
+      </div> -->
+
    </main>
+
+   <footer class="x-footer xstack margin-x-auto justify-space-between pad-y-large">
+      <div class="x-footer-logo">
+         <img class="x-footer-logo-image" src="https://iamone-app-beta.vercel.app/img/iamone-gray.svg" />
+      </div>
+
+      <div class="x-footer-social-links xstack align-center gap-large">
+         <a href="#" class="x-footer-social-link">
+            <svg xmlns="http://www.w3.org/2000/svg" class="x-icon" viewBox="0 0 24 24">
+               <path
+                  d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z">
+               </path>
+            </svg>
+         </a>
+
+         <a href="#" class="x-footer-social-link">
+            <svg xmlns="http://www.w3.org/2000/svg" class="x-icon" viewBox="0 0 24 24">
+               <path
+                  d="M11.999 7.377a4.623 4.623 0 1 0 0 9.248 4.623 4.623 0 0 0 0-9.248zm0 7.627a3.004 3.004 0 1 1 0-6.008 3.004 3.004 0 0 1 0 6.008z">
+               </path>
+               <circle cx="16.806" cy="7.207" r="1.078"></circle>
+               <path
+                  d="M20.533 6.111A4.605 4.605 0 0 0 17.9 3.479a6.606 6.606 0 0 0-2.186-.42c-.963-.042-1.268-.054-3.71-.054s-2.755 0-3.71.054a6.554 6.554 0 0 0-2.184.42 4.6 4.6 0 0 0-2.633 2.632 6.585 6.585 0 0 0-.419 2.186c-.043.962-.056 1.267-.056 3.71 0 2.442 0 2.753.056 3.71.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.042 1.268.055 3.71.055s2.755 0 3.71-.055a6.615 6.615 0 0 0 2.186-.419 4.613 4.613 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.186.043-.962.056-1.267.056-3.71s0-2.753-.056-3.71a6.581 6.581 0 0 0-.421-2.217zm-1.218 9.532a5.043 5.043 0 0 1-.311 1.688 2.987 2.987 0 0 1-1.712 1.711 4.985 4.985 0 0 1-1.67.311c-.95.044-1.218.055-3.654.055-2.438 0-2.687 0-3.655-.055a4.96 4.96 0 0 1-1.669-.311 2.985 2.985 0 0 1-1.719-1.711 5.08 5.08 0 0 1-.311-1.669c-.043-.95-.053-1.218-.053-3.654 0-2.437 0-2.686.053-3.655a5.038 5.038 0 0 1 .311-1.687c.305-.789.93-1.41 1.719-1.712a5.01 5.01 0 0 1 1.669-.311c.951-.043 1.218-.055 3.655-.055s2.687 0 3.654.055a4.96 4.96 0 0 1 1.67.311 2.991 2.991 0 0 1 1.712 1.712 5.08 5.08 0 0 1 .311 1.669c.043.951.054 1.218.054 3.655 0 2.436 0 2.698-.043 3.654h-.011z">
+               </path>
+            </svg>
+         </a>
+
+         <a href="#" class="x-footer-social-link">
+            <svg xmlns="http://www.w3.org/2000/svg" class="x-icon" viewBox="0 0 24 24">
+               <path
+                  d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z">
+               </path>
+            </svg>
+         </a>
+      </div>
+   </footer>
 </body>
+<script>
+   window.onload = function() {
+      function gotoApp() {
+         window.location.href = "https://app.iamone.link";
+      }
+
+      function claimUsername() {
+         const usernameInput = document.getElementById('x-username-claim-input');
+         const username = usernameInput.value;
+
+         window.location.href = `https://app.iamone.link/signup.html?username=${username}`;
+      }
+
+      document
+         .getElementById('username-claim-action-button')
+         .addEventListener('click', claimUsername);
+
+      document
+         .getElementById('app-redirect-button')
+         .addEventListener('click', gotoApp);
+   };
+</script>
+
 </html>
 
 <!-- E81CFF, FF1616 -->
