Added og thumb, update meta props

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,23 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <meta name="description" content="iamone allows you to create your own personal link page for free" />
+   <meta name="keywords" content="Iamone, Im1, Link Page, Personal Link Page, Social Link Page, Bio Link Page, Personal Bio Page" />
+
+   <meta name="author" content="Developar Team" />
+   <meta name="apple-mobile-web-app-title" content="iamone" />
+   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+   <meta name="apple-mobile-web-app-capable" content="yes" />
+   <meta name="theme-color" content="#FFFFFF" />
+
+   <meta property="og:title" content="iamone" />
+   <meta property="og:site_name" content="iamone" />
+   <meta property="og:type" content="website" />
+   <meta property="og:url" content="https://iamone.link" />
+   <meta property="og:image" content="/_/static/images/open-graph-thumb.png" />
+   <meta property="og:locale" content="en_IN" />
+   <meta property="og:description" content="Create your personal link page" />
+
    <link rel="shortcut icon" type="image/x-icon" href="/_/static/favicon.ico" />
    <link rel="icon" type="image/png" sizes="32x32" href="/_/static/favicon-32x32.png" />
    <link rel="icon" type="image/png" sizes="16x16" href="/_/static/favicon-16x16.png" />
