--- a/public/index.html
+++ b/public/index.html
@@ -169,8 +169,8 @@
       </div>
       
       <div class="x-faq">
-         <h4 class="x-faq-title">I love the one.link very much how can I show my appreciation?</h4>
-         <p class="x-faq-body">Glad that you have liked the one.link very much. If you liked it then just share your experience with us by tagging in your stories in social media platform</p>
+         <h4 class="x-faq-title">I love the iamone.link very much how can I show my appreciation?</h4>
+         <p class="x-faq-body">Glad that you have liked the iamone.link very much. If you liked it then just share your experience with us by tagging in your stories in social media platform</p>
       </div>
    </div>
 
