--- a/public/404.html
+++ b/public/404.html
@@ -32,7 +32,7 @@
          margin: 8px;
       }
    </style>
-   <title>Page not found - im1</title>
+   <title>iamone</title>
 </head>
 <body>
    <div class="container">
