--- a/public/500.html
+++ b/public/500.html
@@ -21,8 +21,8 @@
       .heading {
          font-size: 7rem;
          margin: 0;
-         background: linear-gradient(120deg, #efff5c, #ff2727);
-         color: #ff2727;
+         background-image: linear-gradient(120deg, #FF4B2B, #FF416C);
+         color: #FF416C;
          background-clip: text;
          -webkit-background-clip: text;
          -webkit-text-fill-color: transparent;
@@ -32,12 +32,12 @@
          margin: 8px;
       }
    </style>
-   <title>Page not found - iamone</title>
+   <title>Something went wrong - iamone</title>
 </head>
 <body>
    <div class="container">
-      <h1 class="heading">404</h1>
-      <h3 class="msg">Page not found</h3>
+      <h1 class="heading">500</h1>
+      <h3 class="msg">Something went wrong</h3>
    </div>
 </body>
 </html>
