Update public assets

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
    <meta name="description" content="iamone allows you to create your own personal link page for free" />
    <meta name="keywords" content="Iamone, Im1, Link Page, Personal Link Page, Social Link Page, Bio Link Page, Personal Bio Page" />
 
-   <meta name="author" content="Developar Team" />
+   <meta name="author" content="Rajat Sharma" />
    <meta name="apple-mobile-web-app-title" content="iamone" />
    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
    <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -18,13 +18,13 @@
    <meta property="og:site_name" content="iamone" />
    <meta property="og:type" content="website" />
    <meta property="og:url" content="https://iamone.link" />
-   <meta property="og:image" content="/x/static/images/open-graph-thumb.png" />
+   <meta property="og:image" content="https://static.iamone.link/images/open-graph-thumb.png" />
    <meta property="og:locale" content="en_IN" />
    <meta property="og:description" content="Create your personal link page" />
 
-   <link rel="shortcut icon" type="image/x-icon" href="/x/static/favicon.ico" />
-   <link rel="icon" type="image/png" sizes="32x32" href="/x/static/favicon-32x32.png" />
-   <link rel="icon" type="image/png" sizes="16x16" href="/x/static/favicon-16x16.png" />
+   <link rel="shortcut icon" type="image/x-icon" href="https://static.iamone.link/icons/favicon.ico" />
+   <link rel="icon" type="image/png" sizes="32x32" href="https://static.iamone.link/icons/favicon-32x32.png" />
+   <link rel="icon" type="image/png" sizes="16x16" href="https://static.iamone.link/icons/favicon-16x16.png" />
 
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +32,7 @@
    <link rel="stylesheet" href="https://static.iamone.link/css/vars.css" />
    <link rel="stylesheet" href="https://static.iamone.link/css/master.css" />
    <link rel="stylesheet" href="https://static.iamone.link/css/global.css" />
-   <link rel="stylesheet" href="/x/static/site.css" />
+   <link rel="stylesheet" href="https://static.iamone.link/css/site.css" />
    <title>iamone - Create personal link page</title>
 </head>
 
@@ -46,7 +46,7 @@
             <a href="#faq" class="x-navmenu-item">FAQ</a>
             <a href="https://about.developar.in" target="_blank" class="x-navmenu-item">About</a>
          </nav>
-         <button href="/" class="x-navmenu-action-button app-button bg-primary" id="app-redirect-button">&nbsp;Open app&nbsp;</button>
+         <button class="x-navmenu-action-button app-button bg-primary" id="app-redirect-button">&nbsp;Open app&nbsp;</button>
       </div>
    </header>
 
@@ -119,7 +119,7 @@
                      <stop offset="1" stop-color="#FF1616"/>
                      </linearGradient>
                      </defs>
-                     </svg>                                                   
+                  </svg>                                                   
                </div>
                <div class="x-app-feature-name">Customization</div>
             </div>
@@ -128,17 +128,17 @@
 
       <div class="x-core-feature-overview xstack justify-center align-center">
          <div class="x-core-feature-overview-image-wrapper">
-            <img src="/x/static/images/themes.svg" width="240" class="x-core-feature-overview-image" alt="Amazing Themes" />
+            <img src="https://static.iamone.link/images/themes.svg" width="240" class="x-core-feature-overview-image" alt="Amazing Themes" />
          </div>
          <div class="x-core-feature-overview-detail">
             <h2>Amazing Themes</h2>
             <p>You will get best themes for your profile representation, so you can pick suitable themes depending on your profession.</p>
          </div>
       </div>
-      
+
       <div class="x-core-feature-overview reverse xstack justify-center align-center">
          <div class="x-core-feature-overview-image-wrapper">
-            <img src="/x/static/images/analytics.svg" width="380" class="x-core-feature-overview-image" alt="Visual Analytics" />
+            <img src="https://static.iamone.link/images/analytics.svg" width="380" class="x-core-feature-overview-image" alt="Visual Analytics" />
          </div>
          <div class="x-core-feature-overview-detail">
             <h2>Visual Analytics</h2>
@@ -179,7 +179,7 @@
 
    <footer class="x-footer xstack margin-x-auto justify-space-between pad-y-large">
       <div class="x-footer-logo xstack justify-center">
-         <img class="x-footer-logo-image" src="https://iamone-app-beta.vercel.app/img/iamone-gray.svg" />
+         <img class="x-footer-logo-image" src="https://static.iamone.link/icons/iamone-gray.svg" />
       </div>
 
       <div class="xstack justify-center gap-large">
