Setup replit, Update index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
    <meta charset="UTF-8" />
@@ -67,7 +67,7 @@
             <p>It's completely free just claim your link now</p>
          </div>
 
-         <a href="#key-features" class="x-hero-scroll-bottom-icon">
+         <a href="#key-features" class="x-hero-scroll-bottom-icon" name="Scroll Button">
             <svg xmlns="http://www.w3.org/2000/svg" class="x-icon" viewBox="0 0 24 24">
                <path d="M16.293 9.293 12 13.586 7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707z"></path>
             </svg>
@@ -179,7 +179,7 @@
 
    <footer class="x-footer xstack margin-x-auto justify-space-between pad-y-large">
       <div class="x-footer-logo xstack justify-center">
-         <img class="x-footer-logo-image" src="https://static.iamone.link/icons/iamone-gray.svg" />
+         <img class="x-footer-logo-image" src="https://static.iamone.link/icons/iamone-gray.svg" alt="iamone" />
       </div>
 
       <div class="xstack justify-center gap-large">
